# meshtastic_terminal

./: .gitignore  README.md  chat_monitor.py  frequency_slot_selector.py  meshtastic_tui.css  meshtastic_tui.py  preset_selector.py  pyproject.toml  quit_confirm.py
debug_scripts/: check_roles.py  debug_role.py
misc_scripts/: broadcast_until_acked.py
modals/: __init__.py  ble_device_selector.py  frequency_slot_selector.py  node_detail.py  node_list.py  quit_confirm.py  raw_monitor.py  serial_port_selector.py  user_name_setter.py  user_selector.py
