[project]
name = "meshtastic-scripts"
version = "0.1.0"
description = "Collection of Meshtastic utility scripts for monitoring and broadcasting messages"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["meshtastic>=2.0.0", "pypubsub>=4.0.3", "textual>=0.47.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
